--- a/OneDrive/Escritorio/ARCO/Assignment3/mainwindow.ui
+++ b/OneDrive/Escritorio/ARCO/Assignment3/mainwindow.ui
@@ -13,18 +13,30 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>30</y>
-      <width>171</width>
+      <x>110</x>
+      <y>40</y>
+      <width>251</width>
       <height>91</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+      <italic>true</italic>
+      <bold>true</bold>
+      <strikeout>false</strikeout>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 85, 255);</string>
+     <string notr="true">background-color: rgb(0, 85, 255);
+background-color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Selecciona un algortimo</string>
@@ -38,12 +50,16 @@
      <rect>
       <x>90</x>
       <y>200</y>
-      <width>80</width>
-      <height>18</height>
+      <width>101</width>
+      <height>51</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 0, 0);
+</string>
+    </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Eliminar repetidos</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
@@ -51,12 +67,15 @@
      <rect>
       <x>300</x>
       <y>200</y>
-      <width>80</width>
-      <height>18</height>
+      <width>111</width>
+      <height>51</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 0, 0);</string>
+    </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Flitro rojo</string>
     </property>
    </widget>
   </widget>
